@@ -5,7 +5,7 @@ useDynLib(SeqArray,
     SEQ_MergeAllele, SEQ_MergeGeno, SEQ_MergePhase, SEQ_MergeInfo,
     SEQ_MergeFormat,
     SEQ_SetSpaceSample, SEQ_SetSpaceSample2,
-    SEQ_SetSpaceVariant, SEQ_SetSpaceVariant2, SEQ_SplitSelection,
+    SEQ_SetSpaceVariant, SEQ_SetSpaceVariant2, SEQ_SplitSelection, SEQ_SplitSelectionX,
     SEQ_SetChrom, SEQ_GetSpace,
     SEQ_Summary, SEQ_System,
     SEQ_VCF_NumLines, SEQ_VCF_Split, SEQ_VCF_Parse,
@@ -16,7 +16,7 @@ useDynLib(SeqArray,
     SEQ_SelectFlag,
     SEQ_IntAssign,
     SEQ_Pkg_Init,
-    SEQ_bgzip_create,
+    SEQ_bgzip_create, SEQ_Progress, SEQ_ProgressAdd,
     SEQ_ExternalName0, SEQ_ExternalName1, SEQ_ExternalName2,
     SEQ_ExternalName3, SEQ_ExternalName4, SEQ_ExternalName5
 )
