@@ -228,7 +228,7 @@ seqStorageOption <- function(compression=c("ZIP_RA", "ZIP_RA.fast",
 #
 seqParallel <- function(cl=seqGetParallel(), gdsfile, FUN,
     split=c("by.variant", "by.sample", "none"), .combine="unlist",
-    .selection.flag=FALSE, ...)
+    .selection.flag=FALSE, .balancing=FALSE, .bl_size=10000L, .bl_progress=FALSE, ...)
 {
     # check
     stopifnot(is.null(cl) | is.logical(cl) | is.numeric(cl) |
@@ -237,7 +237,14 @@ seqParallel <- function(cl=seqGetParallel(), gdsfile, FUN,
     stopifnot(is.function(FUN))
     split <- match.arg(split)
     stopifnot(is.character(.combine) | is.function(.combine))
-    stopifnot(is.logical(.selection.flag))
+    stopifnot(is.logical(.selection.flag), length(.selection.flag)==1L)
+    stopifnot(is.logical(.balancing), length(.balancing)==1L)
+    if (isTRUE(.balancing))
+    {
+        stopifnot(is.numeric(.bl_size), is.finite(.bl_size),
+            length(.bl_size)==1L, .bl_size > 0L)
+        stopifnot(is.logical(.bl_progress), length(.bl_progress)==1L)
+    }
 
     if (is.character(.combine))
     {
@@ -246,19 +253,30 @@ seqParallel <- function(cl=seqGetParallel(), gdsfile, FUN,
             .combine <- match.fun(.combine)
     }
 
+    # check dimension
     if (is.null(gdsfile))
     {
         if (split != "none")
             stop("'split' should be 'none' if 'gdsfile=NULL'.")
+    } else {
+        dm <- .seldim(gdsfile)
+        if (split == "by.variant")
+        {
+            if (dm[3L] <= 0L) stop("No variants selected.")
+        } else if (split == "by.sample") {
+            if (dm[2L] <= 0L) stop("No samples selected.")
+        }
     }
 
+    # initialize internally
+    .Call(SEQ_IntAssign, process_index, 1L)
+    .Call(SEQ_IntAssign, process_count, 1L)
+
+    # get the number of workers
     njobs <- .NumParallel(cl)
     if (njobs <= 1L)
     {
         ## a single process
-        .Call(SEQ_IntAssign, process_index, 1L)
-        .Call(SEQ_IntAssign, process_count, 1L)
-
         if (.selection.flag)
         {
             dm <- .seldim(gdsfile)
@@ -281,40 +299,42 @@ seqParallel <- function(cl=seqGetParallel(), gdsfile, FUN,
 
         if (split %in% c("by.variant", "by.sample"))
         {
-            dm <- .seldim(gdsfile)
             if (split == "by.variant")
             {
-                if (dm[3L] <= 0) stop("No variants selected.")
                 if (length(cl) > dm[3L]) cl <- cl[seq_len(dm[3L])]
             } else {
-                if (dm[2L] <= 0) stop("No samples selected.")
                 if (length(cl) > dm[2L]) cl <- cl[seq_len(dm[2L])]
             }
-
             sel <- seqGetFilter(gdsfile, .useraw=TRUE)
         } else {
             sel <- list(sample.sel=raw(), variant.sel=raw())
         }
 
-        ans <- .DynamicClusterCall(cl, length(cl), .fun =
-            function(.proc_idx, .proc_cnt, .gds.fn, .sel_sample, .sel_variant,
-                FUN, .split, .selection.flag, ...)
+        if (!isTRUE(.balancing) || split=="none")
         {
-            # export to global variables
-            .Call(SEQ_IntAssign, process_index, .proc_idx)
-            .Call(SEQ_IntAssign, process_count, .proc_cnt)
-
-            # load the package
-            library("SeqArray")
-
-            if (is.null(.gds.fn))
+            ans <- .DynamicClusterCall(cl, length(cl), .fun =
+                function(.proc_idx, .proc_cnt, .gds.fn, .sel_sample, .sel_variant,
+                    FUN, .split, .selection.flag, ...)
             {
-                # call the user-defined function
-                FUN(...)
-            } else {
-                # open the file
-                .file <- seqOpen(.gds.fn, readonly=TRUE, allow.duplicate=TRUE)
-                on.exit({ seqClose(.file) })
+                # export to global variables
+                .Call(SEQ_IntAssign, process_index, .proc_idx)
+                .Call(SEQ_IntAssign, process_count, .proc_cnt)
+
+                # load the package
+                library("SeqArray")
+
+                if (is.null(.gds.fn))
+                {
+                    # call the user-defined function
+                    return(FUN(...))
+                } else if (is.character(.gds.fn))
+                {
+                    # open the file
+                    .file <- seqOpen(.gds.fn, readonly=TRUE, allow.duplicate=TRUE)
+                    on.exit(seqClose(.file))
+                } else {
+                    .file <- .gds.fn
+                }
 
                 # set filter
                 seqSetFilter(.file,
@@ -325,19 +345,90 @@ seqParallel <- function(cl=seqGetParallel(), gdsfile, FUN,
                     .proc_cnt, .selection.flag)
 
                 # call the user-defined function
-                if (.selection.flag)
-                    FUN(.file, .ss, ...)
-                else
-                    FUN(.file, ...)
-            }
+                if (.selection.flag) FUN(.file, .ss, ...) else FUN(.file, ...)
 
-        }, .combinefun = .combine, .stopcluster=FALSE,
-            .proc_cnt = njobs, .gds.fn = gdsfile$filename,
-            .sel_sample = memCompress(sel$sample.sel, type="gzip"),
-            .sel_variant = memCompress(sel$variant.sel, type="gzip"),
-            FUN = FUN, .split = split, .selection.flag=.selection.flag,
-            ...
-        )
+            }, .combinefun=.combine, .proc_cnt=njobs,
+                .gds.fn = if (is.null(attr(cl, "forking"))) gdsfile$filename else gdsfile,
+                .sel_sample = memCompress(sel$sample.sel, type="gzip"),
+                .sel_variant = memCompress(sel$variant.sel, type="gzip"),
+                FUN = FUN, .split = split, .selection.flag = .selection.flag, ...
+            )
+        } else {
+            ## load balancing
+
+            # selection indexing
+            sel <- seqGetFilter(gdsfile)
+            if (split == "by.variant")
+            {
+                totnum <- dm[3L] / .bl_size
+                if (dm[3L] %% .bl_size) totnum <- totnum + 1L
+                sel_idx <- which(sel$variant.sel)
+            } else {
+                totnum <- dm[2L] / .bl_size
+                if (dm[2L] %% .bl_size) totnum <- totnum + 1L
+                sel_idx <- which(sel$sample.sel)
+            }
+            progress <- if (.bl_progress) .seqProgress(length(sel_idx)) else NULL
+            sel_idx <- sel_idx[seq.int(1L, by=.bl_size, length.out=totnum)]
+
+            updatefun <- function(i) .seqProgForward(progress, .bl_size)
+
+            # initialize
+            clusterCall(cl, fun=function(gds, sel_sample, sel_variant, sel_idx)
+            {
+                # export to global variables
+                .Call(SEQ_IntAssign, process_index, 0L)
+                .Call(SEQ_IntAssign, process_count, 0L)
+                # load the package
+                library("SeqArray")
+                # open the file
+                if (is.character(gds))
+                    gds <- seqOpen(gds, readonly=TRUE, allow.duplicate=TRUE)
+                # save interally
+                .packageEnv$gfile <- gds
+                .packageEnv$sample.sel <- memDecompress(sel_sample, type="gzip")
+                .packageEnv$variant.sel <- memDecompress(sel_variant, type="gzip")
+                # set filter
+                seqSetFilter(.packageEnv$gfile,
+                    sample.sel = .packageEnv$sample.sel,
+                    variant.sel = .packageEnv$variant.sel,
+                    verbose=FALSE)
+                NULL
+            },  gds = if (is.null(attr(cl, "forking"))) gdsfile$filename else gdsfile,
+                sel_sample = memCompress(as.raw(sel$sample.sel), type="gzip"),
+                sel_variant = memCompress(as.raw(sel$variant.sel), type="gzip"),
+                sel_idx = sel_idx
+            )
+
+            # finalize
+            on.exit({
+                clusterCall(cl, fun=function(gds)
+                {
+                    if (inherits(.packageEnv$gfile, "SeqVarGDSClass"))
+                        seqClose(.packageEnv$gfile)
+                    .packageEnv$gfile <- NULL
+                })
+            })
+
+            # do parallel
+            ans <- .DynamicClusterCall(cl, totnum, .fun =
+                function(.idx, FUN, .split, .sel_idx, .bl_size, .selection.flag, ...)
+            {
+                # set filter
+                .ss <- .Call(SEQ_SplitSelectionX, .packageEnv$gfile, .idx, .split,
+                    .sel_idx, .packageEnv$variant.sel, .packageEnv$sample.sel,
+                    .bl_size, .selection.flag)
+                # call the user-defined function
+                if (.selection.flag)
+                    FUN(.packageEnv$gfile, .ss, ...)
+                else
+                    FUN(.packageEnv$gfile, ...)
+
+            }, .combinefun=.combine, .updatefun=updatefun, FUN = FUN,
+                .split = (split=="by.variant"), .sel_idx = sel_idx, .bl_size = .bl_size,
+                .selection.flag = .selection.flag, ...
+            )
+        }
 
         if (is.list(ans) & identical(.combine, "unlist"))
             ans <- unlist(ans, recursive=FALSE)
@@ -348,14 +439,6 @@ seqParallel <- function(cl=seqGetParallel(), gdsfile, FUN,
 
         if (split %in% c("by.variant", "by.sample"))
         {
-            dm <- .seldim(gdsfile)
-            if (split == "by.variant")
-            {
-                if (dm[3L] <= 0) stop("No variants selected.")
-            } else {
-                if (dm[2L] <= 0) stop("No samples selected.")
-            }
-
             sel <- seqGetFilter(gdsfile, .useraw=TRUE)
         } else {
             sel <- list(sample.sel=raw(), variant.sel=raw())
@@ -390,10 +473,7 @@ seqParallel <- function(cl=seqGetParallel(), gdsfile, FUN,
                     .proc_cnt, .selection.flag)
 
                 # call the user-defined function
-                if (.selection.flag)
-                    .FUN(.file, .ss, ...)
-                else
-                    .FUN(.file, ...)
+                if (.selection.flag) FUN(.file, .ss, ...) else FUN(.file, ...)
             }
 
         },  .proc_cnt = njobs, .gds.fn = gdsfile$filename,
@@ -424,64 +504,15 @@ seqParallel <- function(cl=seqGetParallel(), gdsfile, FUN,
         {
             # no forking on windows
             cl <- makeCluster(njobs)
-            on.exit({ stopCluster(cl) })
-
-            return(seqParallel(cl, gdsfile, FUN, split, .combine,
-                .selection.flag, ...))
-        }
-
-        if (split %in% c("by.variant", "by.sample"))
-        {
-            dm <- .seldim(gdsfile)
-            if (split == "by.variant")
-            {
-                if (dm[3L] <= 0) stop("No variants selected.")
-                if (cl > dm[2L]) cl <- dm[2L]
-            } else {
-                if (dm[2L] <= 0) stop("No samples selected.")
-                if (cl > dm[1L]) cl <- dm[1L]
-            }
         } else {
-            sel <- list(sample.sel=raw(), variant.sel=raw())
+            # forking
+            cl <- makeForkCluster(njobs)
+            attr(cl, "forking") <- TRUE
         }
 
-        ans <- mclapply(seq_len(njobs),
-            mc.preschedule=FALSE, mc.cores=njobs, mc.cleanup=TRUE,
-            FUN = function(i, .fun)
-            {
-                # export to global variables
-                .Call(SEQ_IntAssign, process_index, i)
-                .Call(SEQ_IntAssign, process_count, njobs)
-
-                if (is.null(gdsfile))
-                {
-                    # call the user-defined function
-                    FUN(...)
-                } else {
-                    sel <- .Call(SEQ_SplitSelection, gdsfile, split, i, cl,
-                        .selection.flag)
-
-                    # call the user-defined function
-                    if (.selection.flag)
-                        FUN(gdsfile, sel, ...)
-                    else
-                        FUN(gdsfile, ...)
-                }
-            }, .fun = FUN)
-
-        if (is.list(ans))
-        {
-            if (identical(.combine, "unlist"))
-            {
-                ans <- unlist(ans, recursive=FALSE)
-            } else if (is.function(.combine))
-            {
-                rv <- ans[[1L]]
-                for (i in seq_len(length(ans)-1L) + 1L)
-                    rv <- .combine(rv, ans[[i]])
-                ans <- rv
-            }
-        }
+        on.exit(stopCluster(cl))
+        return(seqParallel(cl, gdsfile, FUN, split, .combine, .selection.flag,
+            .balancing, .bl_size, .bl_progress, ...))
     }
 
     # output
